--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <!-- Заголовок страницы, контейнер для других важных данных (не отображается) -->
 <head>
 	<!-- Заголовок страницы в браузере -->
-	<title>130521</title>
+	<title>170521</title>
 	<!-- Подключаем CSS -->
 	<link rel="stylesheet" href="css/style.css" />
 
-	<meta name="viewport" content="width=1600, intial-scale=1.0, maximum-scale=1.0 user-scalable=0" />
+	<meta name="viewport" content="width=device-width, intial-scale=1.0" />
 	<!-- Кодировка страницы -->
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
