--- a/index.html
+++ b/index.html
@@ -279,19 +279,19 @@
 				</div>
 				<div class="social">
 					<div class="social__icon">
-						<img src="img/__591.png" width="18px" height="16px" alt="">
+						<img src="img/591.png" width="18px" height="16px" alt="">
 					</div>
 					<div class="social__icon">
-						<img src="img/__590.png" width="10px" height="18px" alt="">
+						<img src="img/590.png" width="10px" height="18px" alt="">
 					</div>
 					<div class="social__icon">
-						<img src="img/__588.png" width="21px" height="20px" alt="">
+						<img src="img/588.png" width="21px" height="20px" alt="">
 					</div>
 					<div class="social__icon">
-						<img src="img/__589.png" width="18px" height="18px" alt="">
+						<img src="img/589.png" width="18px" height="18px" alt="">
 					</div>
 					<div class="social__icon">
-						<img src="img/__592.png" width="18px" height="12px" alt="">
+						<img src="img/592.png" width="18px" height="12px" alt="">
 					</div>
 					
 				</div>
